--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,17 @@
-<footer class="footer"></footer>
+<footer class="footer">
+    <div class="footer_content_wrapper container">
+        <p class="footer_title">- GET IN TOUCH WITH US -</p>
+        <p class="footer_subtitle">
+            Maecenas faucibus molli interdum.
+            Cras mattis consectetur purus sitor amet sed donec malesuada ullamcorper odio. Curabitur blandit tempus porttitor vollisky inceptos mollisestor.
+        </p>
+        <div class="social_icons_wrapper">
+            <img class="social_icon social_icon_1" src="/img/icon_1.png" alt="social icon" class="social_icon">
+            <img class="social_icon social_icon_2" src="/img/icon_2.png" alt="social icon" class="social_icon">
+            <img class="social_icon social_icon_3" src="/img/icon_3.png" alt="social icon" class="social_icon">
+            <img class="social_icon social_icon_4" src="/img/icon_4.png" alt="social icon" class="social_icon">
+            <img class="social_icon social_icon_5" src="/img/icon_5.png" alt="social icon" class="social_icon">
+        </div>
+        <p class="footer_bottom_text"> Moonshine St. 14-05 Light City   /   T. +00 (123) 456 78 90   /   first.last@email.com</p>
+    </div>
+</footer>
