--- a/src/html/header.html
+++ b/src/html/header.html
@@ -8,5 +8,5 @@
         <li class="navbar_item"><a href="#" class="navbar_item_link">FEATURES</a></li>
         <li class="navbar_item"><a href="#" class="navbar_item_link">CONTACT</a></li>
     </ul>
-    <img class="header_img" src="@img/header_bg.png" alt="intro image">
+    <img class="header_img" src="/img/header_bg.png" alt="intro image">
 </header>
