--- a/src/html/head.html
+++ b/src/html/head.html
@@ -10,5 +10,5 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Adaptive</title>
+    <title>Gulp Scss</title>
 </head>
