--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,12 +1,19 @@
 <header class="header container">
-    <ul class="navbar">
-        <li class="navbar_item"><a href="#" class="navbar_item_link">HOME</a></li>
-        <li class="navbar_item"><a href="#" class="navbar_item_link">ABOUT US</a></li>
-        <li class="navbar_item"><a href="#" class="navbar_item_link">OUR JOURNAL</a></li>
-        <li class="navbar_item"><a href="#" class="navbar_item_link">PROJECTS</a></li>
-        <li class="navbar_item"><a href="#" class="navbar_item_link">NEWS</a></li>
-        <li class="navbar_item"><a href="#" class="navbar_item_link">FEATURES</a></li>
-        <li class="navbar_item"><a href="#" class="navbar_item_link">CONTACT</a></li>
-    </ul>
-    <img class="header_img" src="/img/header_bg.png" alt="intro image">
+    <div class="header_bg_holder">
+        <div class="burger_menu">
+            <span class="line line_unique"></span>
+            <span class="line line_cross_top"></span>
+            <span class="line line_cross_bottom"></span>
+        </div>
+        <ul class="navbar">
+            <li class="navbar_item"><a href="#" class="navbar_item_link">HOME</a></li>
+            <li class="navbar_item"><a href="#" class="navbar_item_link">ABOUT US</a></li>
+            <li class="navbar_item"><a href="#" class="navbar_item_link">OUR JOURNAL</a></li>
+            <li class="navbar_item"><a href="#" class="navbar_item_link">PROJECTS</a></li>
+            <li class="navbar_item"><a href="#" class="navbar_item_link">NEWS</a></li>
+            <li class="navbar_item"><a href="#" class="navbar_item_link">FEATURES</a></li>
+            <li class="navbar_item"><a href="#" class="navbar_item_link">CONTACT</a></li>
+        </ul>
+        <img class="header_img" src="/img/header_bg.png" alt="intro image">
+    </div>
 </header>
