--- a/src/html/main.html
+++ b/src/html/main.html
@@ -41,10 +41,10 @@
                 <p class="instagram_subtitle">GO TO OUR INSTAGRAM PAGE -</p>
             </div>
             <div class="instagram_image_wrapper">
-                <div class="instagram_post"><img class="instagram_post_img" src="/img/post_1.png" alt=""></div>
-                <div class="instagram_post"><img class="instagram_post_img" src="/img/post_2.png" alt=""></div>
-                <div class="instagram_post"><img class="instagram_post_img" src="/img/post_3.png" alt=""></div>
-                <div class="instagram_post"><img class="instagram_post_img" src="/img/post_4.png" alt=""></div>
+                <div class="instagram_post"><img class="instagram_post_img instagram_post_img_1" src="/img/post_1.png" alt="instagram post"></div>
+                <div class="instagram_post"><img class="instagram_post_img instagram_post_img_2" src="/img/post_2.png" alt="instagram post"></div>
+                <div class="instagram_post"><img class="instagram_post_img instagram_post_img_3" src="/img/post_3.png" alt="instagram post"></div>
+                <div class="instagram_post"><img class="instagram_post_img instagram_post_img_4" src="/img/post_4.png" alt="instagram post"></div>
             </div>
         </div>
     </div>
